finalizado documentacao com swag
